--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,7 +7,7 @@ publish_mode: editorial_workflow
 
 # This line should *not* be indented
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "static/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "projects"
